<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/lock_reset"
            android:title="@string/menu_change_password" />

        <item
            android:id="@+id/nav_refresh_view"
            android:icon="@drawable/refresh"
            android:title="@string/menu_reload_view" />

        <item
            android:id="@+id/nav_refresh_vonfig"
            android:icon="@drawable/refresh"
            android:title="@string/menu_reload_config" />
        <item
            android:id="@+id/nav_close"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

        </menu>
    </item>



</menu>
